exports[`test should render a Button with merged attributes 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--default TestClass"
  data-mock="data"
  disabled={false}
  style={
    Object {
      "height": "100px",
    }
  } />
`;

exports[`test should render a default component 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--default"
  disabled={false} />
`;

exports[`test should render a default link component 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--linkDefault"
  disabled={false} />
`;

exports[`test should render a default outline component 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--outlineDefault"
  disabled={false} />
`;

exports[`test should render a icon 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--default terra-Button--tiny"
  disabled={false}>
  <img
    alt="icon" />
</button>
`;

exports[`test should render a icon and a text 1`] = `
<button
  aria-disabled={false}
  className="terra-Button terra-Button--default terra-Button--tiny"
  disabled={false}>
  <img
    alt="icon" />
  <span
    className="terra-Button-text">
    text
  </span>
</button>
`;

exports[`test should render as an anchor when provided an href 1`] = `
<a
  aria-disabled={false}
  className="terra-Button terra-Button--default"
  disabled={false}
  href="MockHref">
  <span
    className="terra-Button-text">
    href
  </span>
</a>
`;

exports[`test should render as disabled when set 1`] = `
<button
  aria-disabled={true}
  className="terra-Button terra-Button--default is-disabled"
  disabled={true}
  tabIndex="-1">
  <span
    className="terra-Button-text">
    Disabled
  </span>
</button>
`;
